package com.diguage.didp.abstract-factory;

/**
 * ProductB2 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-16
 */
public class ProductB2 {
}
